...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/generalThing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical"
        android:weightSum="10">

...
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


        <GridLayout
            android:id="@+id/calendarGrid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:alignmentMode="alignMargins"
            android:columnCount="8"
            android:columnOrderPreserved="false"
...
