<resources>
    <string name="app_name">StuddyBuddy</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_groups">GroupsActivity</string>
    <string name="participants">Participants</string>
    <string name="calendar">Calendar</string>
    <string name="groups">Groups</string>
    <string name="profile">Profile</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_calendar">Calendar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_invite_friends">InviteFriendsActivity</string>
</resources>
